--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,10 @@
     "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "mongoose": "^7.1.1",
+    "node-fetch": "^3.3.1",
     "vite": "^4.3.5"
   },
   "scripts": {
