--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "node-fetch": "^3.3.1",
     "vite": "^4.3.5"
