--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
@@ -23,27 +24,27 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-      "@babel/core": "^7.22.1",
-      "@babel/plugin-syntax-jsx": "^7.21.4",
-      "@babel/preset-env": "^7.22.2",
-      "@babel/preset-react": "^7.22.3",
-      "@babel/preset-typescript": "^7.21.5",
-      "@testing-library/jest-dom": "^5.16.5",
-      "@testing-library/react": "^14.0.0",
-      "@types/react": "^18.0.28",
-      "@types/react-dom": "^18.0.11",
-      "@typescript-eslint/eslint-plugin": "^5.57.1",
-      "@typescript-eslint/parser": "^5.57.1",
-      "@vitejs/plugin-react": "^4.0.0",
-      "babel-jest": "^29.5.0",
-      "eslint": "^8.38.0",
-      "eslint-plugin-react-hooks": "^4.6.0",
-      "eslint-plugin-react-refresh": "^0.3.4",
-      "jest-environment-jsdom": "^29.5.0",
-      "jsdom": "^22.1.0",
-      "ts-jest": "^29.1.0",
-      "typescript": "^5.0.2",
-      "vite": "^4.3.8"
-    
+    "@babel/core": "^7.22.1",
+    "@babel/plugin-syntax-jsx": "^7.21.4",
+    "@babel/preset-env": "^7.22.2",
+    "@babel/preset-react": "^7.22.3",
+    "@babel/preset-typescript": "^7.21.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "@vitejs/plugin-react": "^4.0.0",
+    "babel-jest": "^29.5.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "jest-environment-jsdom": "^29.5.0",
+    "jsdom": "^22.1.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.8"
   }
 }
