--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,12 @@
 {
   "devDependencies": {
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
+    "@babel/preset-typescript": "^7.21.5",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   },
@@ -16,6 +20,7 @@
     "vite": "^4.3.5"
   },
   "scripts": {
-    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/index.ts\""
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/index.ts\"",
+    "test": "jest --detectOpenHandles"
   }
 }
