--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "ical": "^0.8.0",
+    "ical.js": "^1.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
