--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "ts-node": "^10.9.1",
     "web-vitals": "^3.3.1",
     "yup": "^1.1.1"
   },
